# Multi-Modal-Health-Monitoring-System

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yml
configs/model/: health_monitoring.yaml
configs/train/: default.yaml
demo/: app.py
notebooks/: health_monitoring_demo.ipynb
scripts/: inference.py  test_system.py  train.py
src/: __init__.py
src/data/: __init__.py
src/eval/: __init__.py
src/utils/: __init__.py
src/viz/: __init__.py
tests/: test_health_monitoring.py
